# pagent

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt
src/cli/include/cli/: cli.h  watcher.h
src/cli/src/: cli.cpp  watcher.cpp
src/http/: CMakeLists.txt
src/http/include/http/: http.h
src/http/src/: http.cpp
src/nodes/: CMakeLists.txt
src/nodes/include/nodes/: array.h  attributes.h  boolean.h  code.h  comment.h  enum.h  enumname.h  error.h  expression.h  for.h  function.h  if.h  lambda.h  method.h  node.h  number.h  operator.h  reference.h  root.h  route.h  statement.h  string.h  type.h  typename.h  variable.h
src/nodes/src/: array.cpp  attributes.cpp  boolean.cpp  code.cpp  comment.cpp  context.cpp  enum.cpp  enumname.cpp  expression.cpp  for.cpp  function.cpp  if.cpp  lambda.cpp  method.cpp  node.cpp  number.cpp  reference.cpp  root.cpp  route.cpp  statement.cpp  string.cpp  type.cpp  typename.cpp  variable.cpp
src/sockets/: CMakeLists.txt
src/sockets/include/sockets/: sockets.h
src/sockets/src/: sockets.cpp
src/standard/: error.html  framework.css  framework.js  index.html  standard.page
src/tests/: CMakeLists.txt
src/tests/include/tests/: list.h
src/tests/src/: list.cpp
